Remove unused fields and add event.ingested